# Gonero

./: .gitignore  README.md  run
include/: monerocrypto.h
src/: main.go  serialization.go  transaction.go  typeBridge.go  wallet.go
src/base58/: base58.go
src/crypto/: keys.c  keys.h  random.c  random.h  rangeproofs.c  rangeproofs.h  signature.go  signatures.c  signatures.h  stealth.c  stealth.h  subaddress.c  subaddress.h
src/crypto/crypto_math/: crypto-ops.c  crypto-ops.h
src/crypto/hash/: hash.c  hash.h  keccak.c  keccak.h
src/utils/: utils.c  utils.h
tests/crypto_test/: CMakeLists.txt  main  main.c
tests/ringct/: CMakeLists.txt  main  main.c
